# hourei_api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  hourei_apiv2.py  law_extraction.py  law_extraction_v2.py  pyproject.toml  test_apiv2.ipynb  text_converter.py  yaml_converter.py  yaml_extractor.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: autorelease.yml  labeler.yml  pre-commit.yml  tests.yml
data/: 土壌汚染対策法.txt  土壌汚染対策法.xml  土壌汚染対策法.yaml  土壌汚染対策法施行規則.txt  土壌汚染対策法施行規則.xml  土壌汚染対策法施行規則.yaml  地方自治法.txt  地方自治法.xml  地方自治法.yaml  石綿障害予防規則.txt  石綿障害予防規則.xml  石綿障害予防規則.yaml  電気事業法.txt  電気事業法.xml  電気事業法.yaml
notebooks/examples/: examples01_hourei_xml_converter.ipynb  test_egov.ipynb  test_houreiapiv2.ipynb  test_houreiapiv2_openai.ipynb  test_houreiapiv2_openai_v2.ipynb  test_law_extraction_v2.ipynb
src/elaws_parser/: __init__.py  hourei_apiv2.py  law_extraction.py  law_extraction_v2.py  text_converter.py  yaml_converter.py
src/elaws_parser/api/: __init__.py
src/elaws_parser/extraction/: __init__.py
src/elaws_parser/parser/: __init__.py  text_converter.py  yaml_converter.py
src/elaws_parser/utils/: __init__.py
src/hourei_api/: __init__.py  law_extraction_v2.py  text_converter.py
tests/: test_extraction.py  test_hourei_apiv2.py  test_integration.py  test_parser.py
