[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elaws-parser"
dynamic = ["version"]
description = "e-Gov法令検索の法令API v2を利用して法令データを取得し、テキスト形式およびYAML形式に変換するためのPythonツール群です。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ToAmano", email = "amanotomohito040@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.1",
    "langchain-openai>=0.1",
    "langgraph>=0.0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "isort",
    "mypy",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/ToAmano/elaws-parser"
"Bug Tracker" = "https://github.com/ToAmano/elaws-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/elaws_parser"]

[tool.hatch.version]
path = "src/elaws_parser/__init__.py"
